[package]
name = "en-readcomiconline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { path = "../../../aidoku/crates/lib" }
gloo-net = "0.4"
scraper = "0.23.1"
wasm-bindgen-futures = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
